Added sample how to mock static props with both mockito and mockk