@@ -25,6 +25,7 @@ dependencies {
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("io.mockk:mockk:1.13.8")
 	testImplementation("org.mockito.kotlin:mockito-kotlin:4.1.0")
+
 	testImplementation(kotlin("test-junit5"))
 	testImplementation("com.appmattus.fixture:fixture:1.2.0")
 }
@@ -36,6 +37,18 @@ tasks.withType<KotlinCompile> {
 	}
 }
 
-tasks.withType<Test> {
+
+tasks.test {
+	jvmArgs = listOf(
+		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
+		"--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+		"--add-opens", "java.base/java.util=ALL-UNNAMED",
+		"--add-opens", "java.base/java.time=ALL-UNNAMED",
+		"-Duser.timezone=GMT"
+	)
+	testLogging {
+		exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
+		showStackTraces = true
+	}
 	useJUnitPlatform()
 }
